# pico_FreeRTOS

./: CMakeLists.txt  FreeRTOS_Kernel_import.cmake  README.md  mem.sh
Inc/: FreeRTOSConfig.h
Src/: main.cc
